# typesense/api/generator/openapi.yml
@@ -926,6 +926,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ConversationUpdateSchema'
+        required: true
       parameters:
         - name: conversationId
           in: path
@@ -990,6 +991,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ConversationModelCreateSchema'
+        required: true
       responses:
         201:
           content:
@@ -1034,6 +1036,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ConversationModelCreateSchema'
+        required: true
       parameters:
         - name: modelId
           in: path
@@ -3000,6 +3003,8 @@ components:
       type: object
       required:
         - id
+        - conversation
+        - last_updated
         - ttl
     ConversationUpdateSchema:
       properties:
